# SAA

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  module_guide.md  upgrade_guide.md
experiments/: basic_survival.py
saa/: __init__.py
saa/adapters/: __init__.py  biological.py  chemical.py  robotic.py
saa/core/: __init__.py  engine.py  event_bus.py  module_registry.py  persistence.py  types.py
saa/interfaces/: __init__.py  action.py  allostasis.py  base.py  embodiment.py  homeostasis.py  interoception.py  memory.py  neuromodulation.py  observability.py  self_model.py  social.py  valuation.py
saa/modules/: __init__.py
saa/schemas/: __init__.py  action.py  allostasis.py  embodiment.py  homeostasis.py  interoception.py  memory.py  neuromodulation.py  observability.py  self_model.py  social.py  valuation.py
saa/simulations/: __init__.py  runner.py  scenarios.py  world.py
saa/sio/: __init__.py  terminal.py
saa/testing/: __init__.py  battery.py
tests/: conftest.py
tests/integration/: test_battery.py  test_engine.py  test_persistence.py
tests/swan/: test_affective_persistence.py  test_attachment_formation.py  test_betrayal_recovery.py  test_grief_persistence.py  test_identity_threat.py  test_multi_goal_conflict.py  test_resource_threat.py  test_upgrade_stability.py
tests/unit/: test_action.py  test_allostasis.py  test_appraisal.py  test_embodiment.py  test_homeostasis.py  test_interoception.py  test_memory.py  test_neuromodulation.py  test_observability.py  test_self_model.py  test_social.py  test_stress.py  test_valuation.py
(+66 files in other folders)
