[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "saa"
version = "0.1.0"
description = "Swan Affective Architecture — a modular platform for studying artificial affect, continuity, and machine feeling-like states"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
api = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
]

[tool.setuptools.packages.find]
include = ["saa*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
